--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,13 @@ name: ci it.bz.opendatahub.alpinebits.landingpage
 on: 
   push:
     branches: [development, main]
-    paths:
-      - "!README.md"
+    paths-ignore:
+      - "README.md"
       
   pull_request:
     branches: [development, main]
-    paths:
-      - "!README.md"
+    paths-ignore:
+      - "README.md"
 
 
   # Allows you to run this workflow manually from the Actions tab
