--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,7 @@
-name: ci it.bz.opendatahub.alpinebits.landingpage
+name: CI
 
-on: 
-  push:
-    branches: [development, main]
-    paths-ignore:
-      - "README.md"
-      
-  pull_request:
-    branches: [development, main]
-    paths-ignore:
-      - "README.md"
+on: push
 
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 jobs:
   build:
