--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
       - name: clone into repo
         uses: actions/checkout@v2
 
+      - name: REUSE Compliance Check
+        uses: fsfe/reuse-action@v1
+
       - name: test
         run: cd src && test -f index.html
 
